Only logged in users can post

--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -23,7 +23,7 @@
     <form action="/chitter" method="POST" style="margin-bottom: 40px;">
         <p>
             UserID: 
-            <input type="text" name="user_id">
+            <p>{{ user }}</p>
         </p>
         <p>
             Post:<br>
